--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -1,3 +1,20 @@
+% 2026
+@unpublished{teach:UPV:SistemasInteligentes:2026eneabr,
+  title   = {{\color{green}Sistemas Inteligentes}},
+  year    = {2026},
+    month = 04,
+  howpublished = {UPV — ene-abr}
+}
+
+@unpublished{teach:UPV:DesarrolloAppsMoviles:2026eneabr,
+  title   = {{\color{green}Desarrollo de Aplicaciones Móviles}},
+  year    = {2026},
+    month = 04,
+  howpublished = {UPV — ene-abr}
+}
+
+
+
 @unpublished{teach:ITSA:ProgramacionSistemasI:2005enejun,
     title   = {Programación de Sistemas I},
     year    = {2005},
@@ -612,19 +629,4 @@
   howpublished = {UPV — sep-dic}
 }
 
-% 2026
-
-@unpublished{teach:UPV:SistemasInteligentes:2026eneabr,
-  title   = {Sistemas Inteligentes},
-  year    = {2026},
-    month = 04,
-  howpublished = {UPV — ene-abr}
-}
-
-@unpublished{teach:UPV:DesarrolloAppsMoviles:2026eneabr,
-  title   = {Desarrollo de Aplicaciones Móviles},
-  year    = {2026},
-    month = 04,
-  howpublished = {UPV — ene-abr}
-}
 
