--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -22,6 +22,9 @@ citecolor=green]{hyperref}
 \usepackage{lastpage}
 
 
+\usepackage{xcolor}
+\definecolor{color_2026}{rgb}{0.8, 0.2, 0.5}
+
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
 %\fancyfoot[R]{\thepage}
