--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -1,9 +1,9 @@
 % 2026
 @unpublished{teach:UPV:SistemasInteligentes:2026eneabr,
   title   = {{\color{color_2026}Sistemas Inteligentes}},
-  year    = {2026},
-    month = 04,
-  howpublished = {UPV — ene-abr}
+  year    = {{\color{color_2026}2026},
+    month = {{\color{color_2026}04},
+  howpublished = {{\color{color_2026}UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:DesarrolloAppsMoviles:2026eneabr,
