--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -255,6 +255,13 @@ citecolor=green]{hyperref}
 
 
 
+\DeclareBibliographyCategory{cursos_2026}
+\addtocategory{cursos_2026}{teach:UPV:SistemasInteligentes:2026eneabr,teach:UPV:DesarrolloAppsMoviles:2026eneabr}
+
+\DeclareBibliographyCategory{cursos_2025}
+\addtocategory{cursos_2025}{teach:UPV:SistemasInteligentes:2025eneabr,teach:UPV:ProgramacionMovil:2025mayago,teach:UPV:ProyectoIntegradorI:2025mayago,teach:UPV:DesarrolloAppsMoviles:2025sepdic}
+
+
 
 \begin{document}
 
