--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -1,13 +1,13 @@
 % 2026
 @unpublished{teach:UPV:SistemasInteligentes:2026eneabr,
-  title   = {{\color{color_2026}Sistemas Inteligentes}},
+  title   = {Sistemas Inteligentes}},
   year    = {2026},
     month = 04,
   howpublished = {UPV — ene-abr}
 }
 
 @unpublished{teach:UPV:DesarrolloAppsMoviles:2026eneabr,
-  title   = {{\color{color_2026}Desarrollo de Aplicaciones Móviles}},
+  title   = {Desarrollo de Aplicaciones Móviles}},
   year    = {2026},
     month = 04,
   howpublished = {UPV — ene-abr}
