--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -262,6 +262,9 @@ citecolor=green]{hyperref}
 \addtocategory{cursos_2025}{teach:UPV:SistemasInteligentes:2025eneabr,teach:UPV:ProgramacionMovil:2025mayago,teach:UPV:ProyectoIntegradorI:2025mayago,teach:UPV:DesarrolloAppsMoviles:2025sepdic}
 
 
+\AtEveryBibitem{\ifcategory{cursos_2026}{\color{red}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2025}{\color{green}}{}}
+
 
 \begin{document}
 
