--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -257,6 +257,8 @@ citecolor=green]{hyperref}
 
 \DeclareBibliographyCategory{cursos_2026}
 \addtocategory{cursos_2026}{teach:UPV:SistemasInteligentes:2026eneabr,teach:UPV:DesarrolloAppsMoviles:2026eneabr}
+\addtocategory{cursos_2026}{FundamentosSI_abr_2026}
+
 
 \DeclareBibliographyCategory{cursos_2025}
 \addtocategory{cursos_2025}{teach:UPV:SistemasInteligentes:2025eneabr,teach:UPV:ProgramacionMovil:2025mayago,teach:UPV:ProyectoIntegradorI:2025mayago,teach:UPV:DesarrolloAppsMoviles:2025sepdic}
