--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -258,6 +258,9 @@ citecolor=green]{hyperref}
 \definecolor{color_2025}{rgb}{0.5, 0.8, 0.2}
 \definecolor{color_2024}{rgb}{0.5, 0.0, 0.2}
 \definecolor{color_2023}{rgb}{0.5, 1.0, 0.2}
+\definecolor{color_2022}{rgb}{1.0, 0.0, 0.2}
+\definecolor{color_2021}{rgb}{0.2, 1.0, 0.0}
+\definecolor{color_2020}{rgb}{0.0, 0.2, 1.0}
 
 \DeclareBibliographyCategory{cursos_2026}
 % Licenciatura
@@ -281,11 +284,26 @@ citecolor=green]{hyperref}
 \addtocategory{cursos_2023}{teach:UPV:FPOO:2023mayago,teach:UPV:LenguajesAutomatas:2023eneabr,teach:UPV:ProgramacionMovil:2023sepdic,
 teach:UPV:SistemasInteligentes:2023mayago}
 
+\DeclareBibliographyCategory{cursos_2022}
+\addtocategory{cursos_2022}{teach:UPV:POO:2022sepdic,teach:UPV:ProgramacionMovil:2022mayago,teach:UPV:ProgramacionMovil:2022sepdic,teach:UPV:SistemasInteligentes:2022eneabr}
+
+\DeclareBibliographyCategory{cursos_2021}
+\addtocategory{cursos_2021}{teach:UPV:FPOO:2021eneabr,teach:UPV:LenguajesAutomatas:2021sepdic,teach:UPV:ProgramacionMovil:2021mayago
+teach:UPV:ProgramacionMovil:2021sepdic}
+
+\DeclareBibliographyCategory{cursos_2020}
+\addtocategory{cursos_2020}{teach:ULSA:AdquisicionImagenes:2020enemay,teach:UPV:ComputoMovil:2020mayago,teach:UPV:GraficacionAvanzada:2020eneabr,teach:UPV:IntGraficacion:2020eneabr,teach:UPV:LenguajesAutomatas:2020sepdic}
+
 
 \AtEveryBibitem{\ifcategory{cursos_2026}{\color{color_2026}}{}}
 \AtEveryBibitem{\ifcategory{cursos_2025}{\color{color_2025}}{}}
 \AtEveryBibitem{\ifcategory{cursos_2024}{\color{color_2024}}{}}
 \AtEveryBibitem{\ifcategory{cursos_2023}{\color{color_2023}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2022}{\color{color_2022}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2021}{\color{color_2021}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2020}{\color{color_2020}}{}}
+
+
 
 
 \begin{document}
