--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -288,7 +288,7 @@ teach:UPV:SistemasInteligentes:2023mayago}
 \addtocategory{cursos_2022}{teach:UPV:POO:2022sepdic,teach:UPV:ProgramacionMovil:2022mayago,teach:UPV:ProgramacionMovil:2022sepdic,teach:UPV:SistemasInteligentes:2022eneabr}
 
 \DeclareBibliographyCategory{cursos_2021}
-\addtocategory{cursos_2021}{teach:UPV:FPOO:2021eneabr,teach:UPV:LenguajesAutomatas:2021sepdic,teach:UPV:ProgramacionMovil:2021mayago
+\addtocategory{cursos_2021}{teach:UPV:FPOO:2021eneabr,teach:UPV:LenguajesAutomatas:2021sepdic,teach:UPV:ProgramacionMovil:2021mayago,
 teach:UPV:ProgramacionMovil:2021sepdic}
 
 \DeclareBibliographyCategory{cursos_2020}
