--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -261,6 +261,24 @@ citecolor=green]{hyperref}
 \definecolor{color_2022}{rgb}{1.0, 0.0, 0.2}
 \definecolor{color_2021}{rgb}{0.2, 1.0, 0.0}
 \definecolor{color_2020}{rgb}{0.0, 0.2, 1.0}
+\definecolor{color_2019}{rgb}{0.8, 0.2, 0.5}
+\definecolor{color_2018}{rgb}{0.5, 0.8, 0.2}
+\definecolor{color_2017}{rgb}{0.5, 0.0, 0.2}
+\definecolor{color_2016}{rgb}{0.5, 1.0, 0.2}
+\definecolor{color_2015}{rgb}{1.0, 0.0, 0.2}
+\definecolor{color_2014}{rgb}{0.2, 1.0, 0.0}
+\definecolor{color_2013}{rgb}{0.0, 0.2, 1.0}
+\definecolor{color_2012}{rgb}{0.8, 0.2, 0.5}
+\definecolor{color_2011}{rgb}{0.5, 0.8, 0.2}
+\definecolor{color_2010}{rgb}{0.5, 0.0, 0.2}
+\definecolor{color_2009}{rgb}{0.5, 1.0, 0.2}
+\definecolor{color_2008}{rgb}{1.0, 0.0, 0.2}
+\definecolor{color_2007}{rgb}{0.2, 1.0, 0.0}
+\definecolor{color_2006}{rgb}{0.0, 0.2, 1.0}
+\definecolor{color_2005}{rgb}{0.5, 1.0, 0.2}
+
+
+
 
 \DeclareBibliographyCategory{cursos_2026}
 % Licenciatura
@@ -295,6 +313,55 @@ teach:UPV:ProgramacionMovil:2021sepdic}
 \addtocategory{cursos_2020}{teach:ULSA:AdquisicionImagenes:2020enemay,teach:UPV:ComputoMovil:2020mayago,teach:UPV:GraficacionAvanzada:2020eneabr,teach:UPV:IntGraficacion:2020eneabr,teach:UPV:LenguajesAutomatas:2020sepdic}
 
 
+\DeclareBibliographyCategory{cursos_2019}
+\addtocategory{cursos_2019}{teach:UPV:ComputoMovil:2019mayago,teach:UPV:GraficacionAvanzada:2019eneabr,teach:UPV:IntGraficacion:2019eneabr,teach:UPV:IntGraficacion:2019sepdic}
+
+
+\DeclareBibliographyCategory{cursos_2018}
+\addtocategory{cursos_2018}{teach:UPV:ComputoMovil:2018mayago,teach:UPV:GraficacionAvanzada:2018eneabr,teach:UPV:IntGraficacion:2018eneabr,teach:UPV:IntGraficacion:2018sepdic}
+
+
+\DeclareBibliographyCategory{cursos_2017}
+\addtocategory{cursos_2017}{teach:UPV:ComputoMovil:2017mayago,teach:UPV:GraficacionAvanzada:2017eneabr,teach:UPV:IntGraficacion:2017sepdic}
+
+
+\DeclareBibliographyCategory{cursos_2016}
+\addtocategory{cursos_2016}{teach:UPV:ComputoMovil:2016mayago,teach:UPV:ComputoMovil:2016sepdic,teach:UPV:GraficacionAvanzada:2016eneabr}
+
+\DeclareBibliographyCategory{cursos_2015}
+\addtocategory{cursos_2015}{teach:UPV:ComputoMovil:2015mayago,teach:UPV:ComputoMovil:2015sepdic}
+
+\DeclareBibliographyCategory{cursos_2014}
+\addtocategory{cursos_2014}{teach:UPV:ComputoMovil:2014mayago,teach:UPV:ComputoMovil:2014sepdic,teach:UPV:GraficacionAvanzada:2014eneabr,teach:UPV:ProcesamientoParalelo:2014eneabr,teach:UPV:SistemasEmbebidos:2014mayago}
+
+\DeclareBibliographyCategory{cursos_2013}
+\addtocategory{cursos_2013}{teach:UPV:ComputoMovil:2013mayago,teach:UPV:ComputoMovil:2013sepdic,teach:UPV:GraficacionAvanzada:2013eneabr,teach:UPV:GraficacionAvanzada:2013mayago,teach:UPV:IntGraficacion:2013eneabr,teach:UPV:SistemasEmbebidos:2013mayago}
+
+\DeclareBibliographyCategory{cursos_2012}
+\addtocategory{cursos_2012}{teach:UPV:ArquitecturaProcesadores:2012eneabr,teach:UPV:IntGraficacion:2012agodic,teach:UPV:SistemasEmbebidos:2012mayago}
+
+\DeclareBibliographyCategory{cursos_2011}
+\addtocategory{cursos_2011}{teach:UPV:ArquitecturaProcesadores:2011agodic,teach:UPV:SistemasEmbebidos:2011agodic,teach:UPV:SistemasEmbebidos:2011mayago}
+
+\DeclareBibliographyCategory{cursos_2010}
+\addtocategory{cursos_2010}{teach:UPV:POO:2010eneabr,teach:UPV:SistemasEmbebidos:2010mayago,teach:UPV:SistemasOperativos:2010mayago}
+
+\DeclareBibliographyCategory{cursos_2009}
+\addtocategory{cursos_2009}{teach:ITSA:InteligenciaArtificial:2009enejun,teach:ITSA:Interfases:2009enejun,teach:UPV:CircuitosLogicos:2009sepdic,teach:UPV:OrganizacionComputadoras:2009sepdic,teach:UPV:POO:2009sepdic}
+
+\DeclareBibliographyCategory{cursos_2008}
+\addtocategory{cursos_2008}{teach:ITSA:GraficacionComputadora:2008agodic,teach:ITSA:InteligenciaArtificial:2008enejun,teach:ITSA:Interfases:2008enejun,teach:ITSA:LenguajeEnsamblador:2008agodic}
+
+\DeclareBibliographyCategory{cursos_2007}
+\addtocategory{cursos_2007}{teach:ITSA:GraficacionComputadora:2007agodic,teach:ITSA:Interfases:2007enejun,teach:ITSA:LenguajeEnsamblador:2007agodic}
+
+\DeclareBibliographyCategory{cursos_2006}
+\addtocategory{cursos_2006}{teach:ITSA:ArquitecturaComputadorasI:2006enejun,teach:ITSA:ArquitecturaComputadorasII:2006enejun,teach:ITSA:LenguajeEnsamblador:2006agodic,teach:ITSA:ProgramacionSistemasI:2006julago,teach:UPP:ArquitecturasAvanzadas:2006sepdic,teach:UPP:HerramientasOfimaticas:2006sepdic}
+
+
+\DeclareBibliographyCategory{cursos_2005}
+\addtocategory{cursos_2005}{teach:ITSA:ArquitecturaComputadorasII:2005agodic,teach:ITSA:ProgramacionSistemasI:2005enejun,teach:ITSA:SeminarioSistemasDigitales:2005julago,teach:ITSA:SistemasDigitales:2005agodic}
+
 \AtEveryBibitem{\ifcategory{cursos_2026}{\color{color_2026}}{}}
 \AtEveryBibitem{\ifcategory{cursos_2025}{\color{color_2025}}{}}
 \AtEveryBibitem{\ifcategory{cursos_2024}{\color{color_2024}}{}}
@@ -302,6 +369,23 @@ teach:UPV:ProgramacionMovil:2021sepdic}
 \AtEveryBibitem{\ifcategory{cursos_2022}{\color{color_2022}}{}}
 \AtEveryBibitem{\ifcategory{cursos_2021}{\color{color_2021}}{}}
 \AtEveryBibitem{\ifcategory{cursos_2020}{\color{color_2020}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2019}{\color{color_2019}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2018}{\color{color_2018}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2017}{\color{color_2017}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2016}{\color{color_2016}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2015}{\color{color_2015}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2014}{\color{color_2014}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2013}{\color{color_2013}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2012}{\color{color_2012}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2011}{\color{color_2011}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2010}{\color{color_2010}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2009}{\color{color_2009}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2008}{\color{color_2008}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2007}{\color{color_2007}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2006}{\color{color_2006}}{}}
+\AtEveryBibitem{\ifcategory{cursos_2005}{\color{color_2005}}{}}
+
+
 
 
 
