--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -344,7 +344,7 @@ teach:UPV:ProgramacionMovil:2021sepdic}
 \addtocategory{cursos_2011}{teach:UPV:ArquitecturaProcesadores:2011agodic,teach:UPV:SistemasEmbebidos:2011agodic,teach:UPV:SistemasEmbebidos:2011mayago}
 
 \DeclareBibliographyCategory{cursos_2010}
-\addtocategory{cursos_2010}{teach:UPV:POO:2010eneabr,teach:UPV:SistemasEmbebidos:2010mayago,teach:UPV:SistemasOperativos:2010mayago}
+\addtocategory{cursos_2010}{teach:UPV:ArquitecturaProcesadores:2010eneabr,teach:UPV:ArquitecturaProcesadores:2010mayago,teach:UPV:POO:2010eneabr,teach:UPV:SistemasEmbebidos:2010mayago,teach:UPV:SistemasOperativos:2010mayago}
 
 \DeclareBibliographyCategory{cursos_2009}
 \addtocategory{cursos_2009}{teach:ITSA:InteligenciaArtificial:2009enejun,teach:ITSA:Interfases:2009enejun,teach:UPV:CircuitosLogicos:2009sepdic,teach:UPV:OrganizacionComputadoras:2009sepdic,teach:UPV:POO:2009sepdic}
