--- a/ListaAsignaturas.tex
+++ b/ListaAsignaturas.tex
@@ -301,50 +301,70 @@ citecolor=green]{hyperref}
 \DeclareBibliographyCategory{cursos_2023}
 \addtocategory{cursos_2023}{teach:UPV:FPOO:2023mayago,teach:UPV:LenguajesAutomatas:2023eneabr,teach:UPV:ProgramacionMovil:2023sepdic,
 teach:UPV:SistemasInteligentes:2023mayago}
+\addtocategory{cursos_2023}{FundamentosSI_dic_2023,ProcesadoresDigitales_abr_2023,TopicosImagenologia_ago_2023}
 
 \DeclareBibliographyCategory{cursos_2022}
 \addtocategory{cursos_2022}{teach:UPV:POO:2022sepdic,teach:UPV:ProgramacionMovil:2022mayago,teach:UPV:ProgramacionMovil:2022sepdic,teach:UPV:SistemasInteligentes:2022eneabr}
+\addtocategory{cursos_2022}{
+FundamentosSI_dic_2022,ProcesadoresDigitales_abr_2022,TopicosImagenologia_ago_2022,TopicosSelectosSistemas_dic_2022}
 
 \DeclareBibliographyCategory{cursos_2021}
 \addtocategory{cursos_2021}{teach:UPV:FPOO:2021eneabr,teach:UPV:LenguajesAutomatas:2021sepdic,teach:UPV:ProgramacionMovil:2021mayago,
 teach:UPV:ProgramacionMovil:2021sepdic}
+\addtocategory{cursos_2021}{FundamentosSI_dic_2021,TopicosImagenologia_ago_2021,VisionComputadora_abr_2021}
 
 \DeclareBibliographyCategory{cursos_2020}
 \addtocategory{cursos_2020}{teach:ULSA:AdquisicionImagenes:2020enemay,teach:UPV:ComputoMovil:2020mayago,teach:UPV:GraficacionAvanzada:2020eneabr,teach:UPV:IntGraficacion:2020eneabr,teach:UPV:LenguajesAutomatas:2020sepdic}
+\addtocategory{cursos_2020}{FundamentosSI_dic_2020,ProcesadoresDigitales_abr_2020,ProcesadoresDigitales_dic_2020,TopicosImagenologia_ago_2020,VisionComputadora_abr_2020}
 
 
 \DeclareBibliographyCategory{cursos_2019}
 \addtocategory{cursos_2019}{teach:UPV:ComputoMovil:2019mayago,teach:UPV:GraficacionAvanzada:2019eneabr,teach:UPV:IntGraficacion:2019eneabr,teach:UPV:IntGraficacion:2019sepdic}
+\addtocategory{cursos_2019}{FundamentosSI_abr_2019,FundamentosSI_dic_2019,ProcesadoresDigitales_dic_2019,TopicosImagenologia_ago_2019,TopicosImagenologia_dic_2019,VisionComputadora_abr_2019,VisionComputadora_ago_2019}
 
 
 \DeclareBibliographyCategory{cursos_2018}
 \addtocategory{cursos_2018}{teach:UPV:ComputoMovil:2018mayago,teach:UPV:GraficacionAvanzada:2018eneabr,teach:UPV:IntGraficacion:2018eneabr,teach:UPV:IntGraficacion:2018sepdic}
+\addtocategory{cursos_2018}{BasesDatos_abr_2018,FundamentosSI_abr_2018,FundamentosSI_dic_2018,VisionComputadora_ago_2018}
 
 
 \DeclareBibliographyCategory{cursos_2017}
 \addtocategory{cursos_2017}{teach:UPV:ComputoMovil:2017mayago,teach:UPV:GraficacionAvanzada:2017eneabr,teach:UPV:IntGraficacion:2017sepdic}
+\addtocategory{cursos_2017}{SeminarioIII_abr_2017,VisionComputadora_abr_2017}
+
 
 
 \DeclareBibliographyCategory{cursos_2016}
 \addtocategory{cursos_2016}{teach:UPV:ComputoMovil:2016mayago,teach:UPV:ComputoMovil:2016sepdic,teach:UPV:GraficacionAvanzada:2016eneabr}
+\addtocategory{cursos_2016}{FundamentosSI_dic_2016,ProcesadoresDigitales_dic_2016,TopicosImagenologia_ago_2016,VisionComputadora_abr_2016}
+
 
 \DeclareBibliographyCategory{cursos_2015}
 \addtocategory{cursos_2015}{teach:UPV:ComputoMovil:2015mayago,teach:UPV:ComputoMovil:2015sepdic}
+\addtocategory{cursos_2015}{FundamentosSI_dic_2015,POO_dic_2015,ProcesamientoDistribuido_ago_2015,TopicosSelectosSistemas_dic_2015,VisionComputadora_abr_2015}
+
 
 \DeclareBibliographyCategory{cursos_2014}
 \addtocategory{cursos_2014}{teach:UPV:ComputoMovil:2014mayago,teach:UPV:ComputoMovil:2014sepdic,teach:UPV:GraficacionAvanzada:2014eneabr,teach:UPV:ProcesamientoParalelo:2014eneabr,teach:UPV:SistemasEmbebidos:2014mayago}
+\addtocategory{cursos_2014}{FundamentosSI_dic_2014,ProcesadoresDigitales_ago_2014,VisionComputadora_abr_2014}
 
 \DeclareBibliographyCategory{cursos_2013}
 \addtocategory{cursos_2013}{teach:UPV:ComputoMovil:2013mayago,teach:UPV:ComputoMovil:2013sepdic,teach:UPV:GraficacionAvanzada:2013eneabr,teach:UPV:GraficacionAvanzada:2013mayago,teach:UPV:IntGraficacion:2013eneabr,teach:UPV:SistemasEmbebidos:2013mayago}
+\addtocategory{cursos_2013}{FundamentosSI_dic_2013,ProcesadoresDigitalesControl_may_2013,TecnologiasMiddleware_dic_2013}
+
 
 \DeclareBibliographyCategory{cursos_2012}
 \addtocategory{cursos_2012}{teach:UPV:ArquitecturaProcesadores:2012eneabr,teach:UPV:IntGraficacion:2012agodic,teach:UPV:SistemasEmbebidos:2012mayago}
+\addtocategory{cursos_2012}{IngenieriaSoftware_ago_2012,ProcesadoresDigitales_dic_2012,TopicosAvanzadosIA_abr_2012}
 
 \DeclareBibliographyCategory{cursos_2011}
 \addtocategory{cursos_2011}{teach:UPV:ArquitecturaProcesadores:2011agodic,teach:UPV:SistemasEmbebidos:2011agodic,teach:UPV:SistemasEmbebidos:2011mayago}
+\addtocategory{cursos_2011}{ProcesadoresDigitales_ago_2011,ProcesadoresDigitales_may_2011a,ProcesadoresDigitalesControl_dic_2011,ProcesadoresDigitalesControl_may_2011,TopicosAvanzadosSistemas_ago_2011}
 
 \DeclareBibliographyCategory{cursos_2010}
 \addtocategory{cursos_2010}{teach:UPV:ArquitecturaProcesadores:2010eneabr,teach:UPV:ArquitecturaProcesadores:2010mayago,teach:UPV:POO:2010eneabr,teach:UPV:SistemasEmbebidos:2010mayago,teach:UPV:SistemasOperativos:2010mayago}
+\addtocategory{cursos_2010}{ProcesadoresDigitales_dic_2010b,ProcesadoresDigitales_may_2010a,TopicosAvanzadosIA_dic_2010}
+
 
 \DeclareBibliographyCategory{cursos_2009}
 \addtocategory{cursos_2009}{teach:ITSA:InteligenciaArtificial:2009enejun,teach:ITSA:Interfases:2009enejun,teach:UPV:CircuitosLogicos:2009sepdic,teach:UPV:OrganizacionComputadoras:2009sepdic,teach:UPV:POO:2009sepdic}
