--- a/Revistas.bib
+++ b/Revistas.bib
@@ -1,6 +1,21 @@
 % Encoding: UTF-8
 % Revistas JCR, SCIMAGOJR o LATININDEX
 
+@Article{MarcoNuno_Revista_2026_02_02,
+author={Cadena-Flores, Sergio
+and Barron-Zambrano, Jose Hugo
+and Torres-Arce, Juan Manuel
+and Rangel-Magdaleno, Jose de Jesus
+and \textbf{M. A. Nuño-Maganda}},
+title={From Data to Diagnosis: A Systematic Review of EEG Databases for Epilepsy},
+journal={Archives of Computational Methods in Engineering},
+year={2026},
+    month       = {2},
+day={26},
+issn={1886-1784},
+doi={10.1007/s11831-026-10521-x}
+}
+
 
 @article{MarcoNuno_Revista_2026_02_01,
 title = {{Mobile2D-3D-RoboticSim: A robotic platform for computational thinking assessment in STEM and STEAM education}},
@@ -9,6 +24,7 @@ volume = {33},
 pages = {102473},
 year = {2026},
 issn = {2352-7110},
+    month       = {2},
 doi = {10.1016/j.softx.2025.102473},
 author = {José Hugo Barrón-Zambrano and \textbf{M. A. Nuño-Maganda} and Melchor Hernández-Díaz and José de Jesús Rangel-Magdaleno and Yahir Hernández-Mier},
 keywords = {Educational technology, Mobile applications, Mobile learning, Robot programming, Systems simulation, Virtual prototyping}
@@ -23,6 +39,7 @@ JOURNAL = {Processes},
 VOLUME = {14},
 YEAR = {2026},
 NUMBER = {1},
+    month       = {1},
 ARTICLE-NUMBER = {164},
 ISSN = {2227-9717},
 DOI = {10.3390/pr14010164}
